# DataLens

./: .env.example  .gitignore  Makefile  README.md  SPEC.md  pyproject.toml
backend/app/: database.py  main.py
backend/app/models/: chart.py  chat.py  dataset.py
backend/app/routers/: charts.py  chat.py  datasets.py  filters.py  profile.py  summary.py  upload.py
backend/app/services/: chart_selector.py  llm.py  profiler.py  query_engine.py
backend/tests/: conftest.py  test_chart_selector.py  test_charts.py  test_chat_tools.py  test_profiling.py  test_upload.py
docs/: report.md
docs/adrs/: 001-llm-provider.md  002-sqlite-schema.md  003-chart-auto-selection.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartCard.tsx  ChatPanel.tsx  Dashboard.tsx  DataProfile.tsx  ExecutiveSummary.tsx  FilterPanel.tsx  UploadZone.tsx
frontend/src/lib/: api.ts
frontend/tests/: ChatPanel.test.tsx  Dashboard.test.tsx  DataProfile.test.tsx  FilterPanel.test.tsx  UploadZone.test.tsx
tasks/: plan.md  todo.md
