[project]
name = "datalens-backend"
version = "1.0.0"
description = "DataLens backend — FastAPI application for data analytics with LLM chat"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "google-generativeai>=0.8.0",
    "openpyxl>=3.1.2",
    "google-genai>=2.0.1",
    "groq>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
